# dabasemint

./: .gitignore  .heal-state.md  .karpathy-session.md  .pi-everywhere  HEAL-REPORT.md  PI-DISCIPLINE.md  README.md  RECOMMENDATIONS.md  agent-proxy.mjs  index.html  package-lock.json  package.json  vite.config.js
config/: agent.local.json.example
docs/: CURRENT-STATE.md  GLOSSARY.md
docs/archive/: README.md
docs/archive/2026-07-14-doc-cleanup/: INITIAL-STRUCTURE.md  STRATEGIC-PLAN.md
registry/: mint-kg.json
scripts/: browser-qa-extended.py  browser-qa.py  build-sidecar.mjs  e2e-test.mjs  serve.mjs  verify.mjs
src/: agent-provider.mjs  agent-touchpoints.mjs  main.js  mint-knowledge-graph.mjs  styles.css  toolchest-loader.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
toolchests/sample-page-agent/: .forge-state.md  README.md
